updated code to work with new file names

--- a/FWebsite/contact.html
+++ b/FWebsite/contact.html
@@ -4,7 +4,7 @@
 <head>
   <title>Tyler, the Creator :: Contact</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="yoga.css">
+  <link rel="stylesheet" href="main.css">
   <link rel="shortcut icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -24,7 +24,7 @@
     </nav>
     <main>
       <div id="hero">
-        <img class="front-page-pic" src="lightGreenTyler.jpg" alt="Tyler, the Creator">
+        <img class="front-page-pic" src="lightGreenTylerBanner.jpg" alt="Tyler, the Creator">
       </div>
       <h2>Send a Message to Tyler, the Creator</h2>
       <p>“Required information is marked with an asterisk (*).”</p>
