--- a/FWebsite/index.html
+++ b/FWebsite/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Tyler, the Creator</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="yoga.css">
+  <link rel="stylesheet" href="main.css">
   <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
