--- a/FWebsite/events.html
+++ b/FWebsite/events.html
@@ -4,7 +4,7 @@
 <head>
   <title>Tyler, the Creator :: Events</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="yoga.css">
+  <link rel="stylesheet" href="main.css">
   <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -24,7 +24,7 @@
     </nav>
     <main>
       <div id="hero">
-        <img class="front-page-pic" src="blueTyler.jpg" alt="Tyler, the Creator">
+        <img class="front-page-pic" src="blueTylerBanner.jpg" alt="Tyler, the Creator">
       </div>
       <h2>Events</h2>
       <p>Here are Tyler's concert dates and locations.</p>
